# BlockyCraft

./: .gitignore  ARCHITECTURE_PLAN.md  BEDROCK_IMPLEMENTATION_COMPLETE.md  CODEGEN_INTEGRATION_SUMMARY.md  EXAMPLES_PLAN.md  GPT_IMAGE_API.md  MIGRATION_STATUS.md  MULTI_PLATFORM_COMPLETE.md  MULTI_PLATFORM_PLAN.md  NEW_ACTIONS.txt  README.md  auto_deploy_example.py  deploy_api.py  deploy_bedrock_api.py  deploy_bukkit_api.py  deploy_example.py  deploy_java_api.py  index-old.html  index.html  main.js  package-lock.json  package.json  projects.js  recipe_generator.py  resource_pack_generator.py  serve.py  start-dev.bat  start-dev.sh  start-tauri-dev.sh  start.sh  tailwind.config.js  test_all_examples.py  test_all_examples_real.py  test_example_browser.js  test_examples.html  texture_generator.py  tsconfig.json  vite.config.ts  voxel_shape_library.py
.claude/: CLAUDE.md  claude.md
bedrock-addon-template/: README.md
blocklycraft-loader/: build.gradle  gradle.properties
blocks/: actions.js  custom_items.js  custom_mobs.js  events.js  logic.js  looks.js  motion.js  operators.js  player.js  sensing.js  sound.js  variables.js  world.js
bukkit-plugin-template/: README.md  pom.xml
data/: minecraft_items.js
exporter/: builder.js  java_builder.js
generators/: bedrock.js  bukkit.js  custom_items_java.js  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: db_commands.rs  mod.rs  openai.rs  openai_codegen.rs  server_commands.rs  voxel_shape_library.py
(+102 files in other folders)
